Changelog
=========

0.7.1 (unreleased)
------------------

- Nothing changed yet.


0.7.0 (2012-07-17)
------------------


- Assert that no entries with start after end are uploaded to collmex.

- Day parameter of cli is now optional (default: today).


0.6.1 (2012-02-21)
------------------

- Fixed brown-bag release.


0.6.0 (2012-02-21)
------------------

- Don't use inactive tasks in collmex.


0.5.2 (2012-02-06)
------------------

- Fixed brown-bag release.


0.5.1 (2012-02-06)
------------------

- Fixed daily and weekly report functions which were broken since version
  0.5.


0.5 (2012-01-26)
----------------

- Introduce command-line upload utility ``gtimelog-cli`` (#10105).


0.4.2 (2011-05-16)
------------------

- Make sure timelog comments uploaded to Redmine are at most 255 characters
  long, avoid including duplicate comments in the same time entry (#9016).


0.4.1 (2011-04-11)
------------------

- Fix bug that too many Redmine time entries were deleted (#8909).


0.4.0 (2011-04-07)
------------------

- Change Redmine integration to use the REST API (#8901).
- Collmex uploads the whole week (#8808).
- Fix bug with umlauts in Collmex (#6474).


0.3.1 (2011-04-06)
------------------

- Update URLs for Redmine 1.1


0.3.0 (2011-04-05)
------------------

- Change Redmine integration so it does not require a plugin on the Redmine
  server. Users upgrading need to configure the name of the activity to use.
- Multiple Redmine servers are now supported (see README.txt).
- Filling Redmine has been extracted into its own command and is no longer done
  automatically along with HT or Collmex (#8884).
- Fix encoding problem with HT (#6474).


0.2.0 (2010-09-28)
------------------

- Use Rest-API to get issue subject.


0.1.9 (2010-04-09)
------------------

- Prevent an error with completion entries being None that occured on OS X.


0.1.8 (2010-04-07)
------------------

- Repair auto-completion that broke in 0.1.7.


0.1.7 (2010-04-01)
------------------